--- a/views/admin/couponAdmin.ejs
+++ b/views/admin/couponAdmin.ejs
@@ -322,8 +322,8 @@
                   <tr>
                     <td><%=coupon.couponCode%></td>
                     <td><%=coupon.description%></td>
-                    <td><%=coupon.discountAmount%></td>
-                    <td><%=coupon.minimumPurchase%></td>
+                    <td>₹<%=coupon.discountAmount%></td>
+                    <td>₹<%=coupon.minimumPurchase%></td>
                     <td><%=coupon.expiryDate.toLocaleDateString()%></td>
                     <td class="text-center">
                       <a
