--- a/views/admin/editcategory.ejs
+++ b/views/admin/editcategory.ejs
@@ -87,7 +87,7 @@
             </a>
           </li>
           <li class="menu-item">
-            <a class="menu-link" href="/admin/view-all-orders">
+            <a class="menu-link" href="/admin/coupon-management">
               <i class="icon material-icons md-shopping_cart"></i>
               <span class="text">Order Management</span>
             </a>
