--- a/views/admin/userManagement.ejs
+++ b/views/admin/userManagement.ejs
@@ -128,7 +128,7 @@
             </a>
           </li>
           <li class="menu-item">
-            <a class="menu-link" href="">
+            <a class="menu-link" href="/admin/coupon-management">
               <i class="icon material-icons md-local_offer"></i>
               <span class="text">Coupon Management </span>
             </a>
