--- a/views/user/partials/header.ejs
+++ b/views/user/partials/header.ejs
@@ -90,10 +90,23 @@
             </div>
             <div class="header-right">
               <div class="search-style-2">
-                <form action="#">
-                  <input type="text" placeholder="Search for items..." />
+                <form  id="searchForm">
+                  <input type="text" name="searchFor" id="searchInput" placeholder="Search for items..." />
                 </form>
               </div>
+              <script>
+                document.addEventListener("DOMContentLoaded", function () {
+                    let searchInput = document.getElementById('searchInput');
+                    if (searchInput) {
+                        searchInput.addEventListener('keypress',async function (e) {
+                            if (e.key === 'Enter') {
+                                const search = searchInput.value;
+                                await fetch(`/user/search?search=${search}`)
+                            }
+                        });
+                    }
+                });
+            </script>
               <div class="header-action-right">
                 <div class="header-action-2">
                   <div class="header-action-icon-2">
